Fix first month spacing

--- a/src/components/Timeline/Section/styles.module.css
+++ b/src/components/Timeline/Section/styles.module.css
@@ -14,6 +14,10 @@
   padding: 5px;
 }
 
+.month.first {
+  margin-top: 60px;
+}
+
 @media screen and (max-width: 767px) {
   .root {
     padding-bottom: 40px;
